# alphamind

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-record-architecture-decisions.md  0002-postgres-pgvector-for-retrieval.md  0003-edgar-ingestion-design.md  0004-storage-layer-for-filing-bodies.md  0005-retrieval-pipeline-design.md  0006-llm-provider-integration.md  0007-agent-graph-design.md  0008-fastapi-serving-and-sse.md  README.md
docs/runbooks/: api.md  ask.md  ingest-edgar.md  research.md  retrieval.md
infra/: docker-compose.yml
infra/postgres/init/: 01-extensions.sql
scripts/: ask.py  healthcheck.py  ingest_edgar.py  query.py  research.py
src/alphamind/: __init__.py  config.py
src/alphamind/agents/: __init__.py  critic.py  graph.py  json_utils.py  router.py  state.py  synthesizer.py
src/alphamind/agents/specialists/: __init__.py  base.py  fundamentals.py  risk.py  sentiment.py  technical.py
src/alphamind/api/: __init__.py  app.py  dependencies.py  schemas.py  sse.py
src/alphamind/api/routes/: health.py  research.py
src/alphamind/chunking/: __init__.py  chunker.py  parser.py  service.py
src/alphamind/db/: __init__.py  base.py  session.py
src/alphamind/db/migrations/: env.py
src/alphamind/embeddings/: __init__.py  base.py  deterministic.py  factory.py  gemini.py  service.py
src/alphamind/ingestion/: __init__.py
src/alphamind/ingestion/edgar/: __init__.py  client.py  schemas.py  service.py
src/alphamind/llm/: __init__.py  anthropic.py  base.py  echo.py  factory.py
src/alphamind/models/: __init__.py  company.py  filing.py  filing_chunk.py  filing_document.py
src/alphamind/reranking/: __init__.py  base.py  cross_encoder.py  deterministic.py  factory.py  service.py
src/alphamind/retrieval/: __init__.py  fusion.py  results.py  service.py
src/alphamind/retrieval/chunking/: __init__.py  base.py  pipeline.py  sections.py  service.py  splitter.py  text.py
src/alphamind/retrieval/embeddings/: __init__.py  base.py  deterministic.py  factory.py  gemini.py  service.py
src/alphamind/retrieval/search/: __init__.py  cross_encoder.py  dense.py  fusion.py  lexical.py  pipeline.py  rerank.py  reranker_factory.py
src/alphamind/storage/: __init__.py  base.py  factory.py  local.py
tests/integration/: conftest.py  test_chunking_persistence.py  test_embedding_writeback.py  test_search_dense.py  test_search_hybrid.py  test_search_lexical.py
tests/unit/: test_config.py  test_package.py
tests/unit/agents/: conftest.py  test_critic.py  test_graph.py  test_json_utils.py  test_router.py  test_state.py  test_synthesizer.py
tests/unit/agents/specialists/: conftest.py  test_fundamentals.py  test_risk.py  test_sentiment.py  test_technical.py
tests/unit/api/: conftest.py  test_health.py  test_research.py
tests/unit/chunking/: test_chunker.py  test_parser.py  test_service.py
tests/unit/embeddings/: test_deterministic.py  test_factory.py  test_gemini.py  test_service.py
tests/unit/ingestion/edgar/: test_client.py  test_schemas.py  test_service_bodies.py
tests/unit/llm/: test_anthropic.py  test_echo.py  test_messages.py
tests/unit/reranking/: test_deterministic.py  test_factory.py  test_service.py
tests/unit/retrieval/: test_fusion.py  test_service.py
tests/unit/retrieval/chunking/: test_pipeline.py  test_sections.py  test_splitter.py  test_text.py
tests/unit/retrieval/embeddings/: test_deterministic.py  test_factory.py  test_gemini.py
tests/unit/retrieval/search/: test_cross_encoder.py  test_fusion.py  test_pipeline.py  test_rerank.py  test_reranker_factory.py
tests/unit/storage/: test_local.py
(+8 files in other folders)
